# enel-pdf-parser

./: .gitignore  Home.py  LANGCHAIN_MIGRATION_PLAN.md  README.md  README_AI.md  dashboard.py  database_manager.py  debug.py  extractor_origin.py  financial_flow.py  main.py  public_lighting.py  pyproject.toml  tax_rules.py  taxometer.py  taxometer_origin.py
cache/: cache_db_0.9.db
functions/: unlocker.py
logs/: google_models_test_20260204T211215Z.json  historico_geral.jsonl
pages/: 1_⚙️_Monitor_de_Logs.py  1_📂_Importar_Fatura.py  2_❓_Ajuda.py  2_📂_Importar_Fatura.py  3_🤖_Assistente_IA.py
src/: desbloqueador.py  extractor.py  extrator.py
src/components/: consumption_dashboard.py  financial_flow.py  public_lighting.py  taxometer.py
src/config/: tax_rules.py
src/database/: manager.py
src/services/: agent_factory.py  extractor.py  llm_client.py  logger.py  unlocker.py
tests/: test_adapters.py  test_llm_client.py  teste_senha.py
