[project]
name = "enel-pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "google-genai>=0.2.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0,<3.0.0",
    "pandasai>=2.0.24",
    "pdfplumber>=0.11.9",
    "pikepdf>=10.3.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "streamlit>=1.21.0",
    "tqdm>=4.67.3",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.14", "taskipy>=1.14.1"]

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest ."
run = "python main.py"
pre_test = "task lint"
